--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,8 @@
     --thm-gray-rgb: 115, 124, 118;
     --thm-primary: #fdc400;
     --thm-primary-rgb: 253, 196, 0;
-    --thm-black: #1e3226;
+/*     --thm-black: #1e3226; */
+    --thm-black: ##0a4a82;
     --thm-black-rgb: 30, 50, 38;
 }
 
