--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@
     --thm-primary: #fdc400;
     --thm-primary-rgb: 253, 196, 0;
 /*     --thm-black: #1e3226; */
-    --thm-black: ##0a4a82;
+    --thm-black: #0a4a82;
     --thm-black-rgb: 30, 50, 38;
 }
 
